Compile the favicon for the HTML from the icon

--- a/scripts/auto_export_html/Makefile
+++ b/scripts/auto_export_html/Makefile
@@ -1,10 +1,14 @@
 SCRIPT := idea_auto_export_html
 INSTALL_PATH ?= /usr/local/bin
+ICON_PATH ?= ../../resources/icon/icon_192x192.png
 
 .PHONY: install
-install: $(SCRIPT)
+install: $(SCRIPT) $(ICON_PATH)
 	@echo "- Installing $(SCRIPT) script in $(INSTALL_PATH)"
-	cp $(SCRIPT) "$(INSTALL_PATH)"
+	# Source: <https://www.baeldung.com/linux/envsubst-command>
+	export ICON_BASE64="$(shell convert -scale 16x16 $(ICON_PATH) -strip PNG:- | base64 | tr -d '\n')" && \
+	envsubst '$$ICON_BASE64' < "$(SCRIPT)" > "$(INSTALL_PATH)/$(SCRIPT)"
+	chmod +x "$(INSTALL_PATH)/$(SCRIPT)"
 
 .PHONY: uninstall
 uninstall:
